examples/type_error/expected.txt
error: type mismatch: expected int, found str
  --> input:2:1
  |
2 | let x: Int = "hello"
  | ^^^^^^^^^^^^^^^^^^^^ found `str`
